# factorio-servers-statistics

./: .editorconfig  Cargo.toml  Procfile  README.md  app.json  temp.js  test  todo.md
.circleci/: config.yml
analytics/: .gitignore  README.md  collect_data.sh  cut_data.py  estimate_sizes.py  process_data.py  result.txt  result_old.txt  анализ-требований.md
analytics/results/: multiservers.txt  server_ids.txt
analytics/results/multiservers_comparison/: 5344108.json  5344110.json  5344112.json  5344116.json
frontend/: .editorconfig  README.md  package.json
frontend/public/: index.html
frontend/src/: App.vue  main.ts  model.ts  router.ts  store.ts  util.ts
frontend/src/misc/: richText.ts
frontend/src/plugins/: axios.js  vuetify.ts
frontend/src/views/: Home.vue  api.ts
frontend/src/views/home/: Home.vue  TopGamesByNumberPlayers.vue
frontend/src/views/server/: CustomRangeSelector.vue  PlayersList.vue  ServerNumberPlayersPlot.vue  ServerPage.vue  plot.ts
src/: api.rs  cacher.rs  external_storage.rs  fetcher_get_game_details.rs  fetcher_get_games.rs  fetcher_get_games_offline.rs  global_config.rs  lib.rs  main.rs  util.rs  yandex_cloud_storage.rs
src/analytics/: mod.rs
src/external_storage/: backups.rs  compression.rs  mod.rs
src/server/: cors.rs  mod.rs
src/server/routes/: get_server_info.rs  main_page.rs  mod.rs  util.rs
src/state/: big_string.rs  mod.rs  updater.rs
src/tests/: mod.rs  serialization.rs
src/util/: games_map.rs  hash_map.rs  map_deref.rs  mod.rs
src/yandex_cloud_storage/tests/: mod.rs  rusoto_async.rs  rusoto_async_streamed.rs  rusoto_async_streamed_repeated.rs  rusoto_sync.rs
various/analyze_compressions_methods/: analyze_compressions_methods.sh  results.txt
