[package]
# fss — acronym of "factorio-servers-statistics"
name = "fss"
version = "0.1.0"
authors = ["Dmitry Murzin <diraria@yandex.ru>"]
edition = "2018"

[profile.dev]
panic = 'abort'

[profile.release]
panic = 'abort'
debug = true

[dependencies]
reqwest = "0.9.20"
serde = { version = "1.0.99", features = ["derive"] }
serde_json = "1.0.40"
chrono = "0.4.8"
parking_lot = "0.9.0"
tokio-timer = "0.2.11"
rand = "0.7.0"
base64 = "0.10.1"
itertools = "0.8.0"
rocket = "0.4.2"
rocket_contrib = "0.4.2"
ctrlc = { version = "3.1.3", features = ["termination"] }
xz2 = "0.1.6"
bincode = "1.1.4"
clap = "2.33.0"
lazy_static = "1.4.0"
#todo
#rusoto_s3 = "0.40.0"
#rusoto_core = "0.40.0"
#rusoto_credential = "0.40.0"
rusoto_s3 = { git = "https://github.com/rusoto/rusoto", rev = "958d9fa439770f94d330d8e06d4ada58e76b3823" }
rusoto_core = { git = "https://github.com/rusoto/rusoto", rev = "958d9fa439770f94d330d8e06d4ada58e76b3823" }
rusoto_credential = { git = "https://github.com/rusoto/rusoto", rev = "958d9fa439770f94d330d8e06d4ada58e76b3823" }
tokio = "0.1.22"
dotenv = "0.14.1"
lz4 = "1.23.1"
