[package]
# fss — acronym of "factorio-servers-statistics"
name = "fss"
version = "0.1.0"
authors = ["Dmitry Murzin <diraria@yandex.ru>"]
edition = "2018"
default-run = "fss"

[profile.dev]
panic = 'abort'

[profile.release]
panic = 'abort'
debug = true

[dependencies]
reqwest = "0.9.22"
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0.42"
chrono = "0.4.10"
parking_lot = "0.10.0"
tokio-timer = "0.2.12"
rand = "0.7.2"
base64 = "0.11.0"
itertools = "0.8.2"
rocket = "0.4.2"
rocket_contrib = "0.4.2"
ctrlc = { version = "3.1.3", features = ["termination"] }
xz2 = "0.1.6"
bincode = "1.2.0"
clap = "2.33.0"
lazy_static = "1.4.0"
rusoto_s3 = "0.42.0"
rusoto_core = "0.42.0"
rusoto_credential = "0.42.0"
tokio = "0.1.22"
#tokio = { version = "0.2.2", features = ["full"] }
#tokio-util = { version = "0.2.0", features = ["codec"] }
dotenv = "0.15.0"
lz4 = "1.23.1"
histogram = "0.6.9"
regex = "1.3.3"
hashbrown = { version = "0.7.1", features = ["serde", "nightly"] }
jemallocator = "0.3.2"
jemalloc-ctl = "0.3.3"
