[package]
# fss — acronym of "factorio-servers-statistics"
name = "fss"
version = "0.1.0"
authors = ["Dmitry Murzin <diraria@yandex.ru>"]
edition = "2018"
default-run = "fss"

[profile.dev]
panic = 'abort'

[profile.release]
panic = 'abort'
debug = true

[profile.dev.package."*"]
opt-level = 3
debug = true
[profile.release.package."*"]
opt-level = 3
debug = true
[profile.test.package."*"]
opt-level = 3
debug = true

[dependencies]
base64 = "0.12.0"
bincode = "1.2.1"
bytes = "0.5.4"
chrono = "0.4.11"
clap = "2.33.0"
ctrlc = { version = "3.1.4", features = ["termination"] }
dotenv = "0.15.0"
futures = "0.3.4"
hashbrown = { version = "0.7.1", features = ["serde", "nightly"] }
histogram = "0.6.9"
itertools = "0.9.0"
jemalloc-ctl = "0.3.3"
jemallocator = "0.3.2"
lazy_static = "1.4.0"
lz4 = "1.23.1"
parking_lot = "0.10.0"
rand = "0.7.3"
regex = "1.3.6"
reqwest = { version = "0.10.4", features = ["blocking"] }
rocket = "0.4.4"
rocket_contrib = "0.4.4"
rusoto_core = "0.43.0"
rusoto_credential = "0.43.0"
rusoto_s3 = "0.43.0"
serde = { version = "1.0.105", features = ["derive"] }
serde_json = "1.0.50"
tokio = "0.2.13"
tokio-timer = "0.2.13"
tokio-util = { version = "0.3.1", features = ["codec"] }
xz2 = "0.1.6"
